初始框架搭建

--- a/zhihu/src/main/resources/application.properties
+++ b/zhihu/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8080
+spring.velocity.suffix=.html
+spring.datasource.url=jdbc:mysql://110.64.66.221:3338/zhihu?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+mybatis.config-location=classpath:mybatis-config.xml
+mybatis.mapperLocations=classpath:mapper/*.xml
+spring.velocity.toolbox-config-location=toolbox.xml
